--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
 #container {
     width: 60%;
     margin: 60px auto;
+    border: 1px solid black;
+    padding: 10px;
+    padding-left: 30px;
 }
 
 /* Set it to a multi-column layout */
@@ -144,6 +147,10 @@ time {
         font-size: 12px;
         margin-top: 6px;
     }
+
+    abbr {
+    text-decoration: none;
+}
 
     /* Adjust heading styles for smaller screens */
     article h2:nth-of-type(1) {
